force-app/main/default/objects/Prepayment__c/Prepayment__c.object-meta.xml
<CustomObject>
    <label>Prepayment</label>
    <nameField>
        <displayFormat>PP{00000}</displayFormat>
        <label>Prepayment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prepayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>