force-app/main/default/objects/Prepayment__c/fields/Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Amount_Remaining__c</fullName>
    <label>Amount Remaining</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>