force-app/main/default/objects/Prepayment__c/fields/Patient_or_Donor__c.field-meta.xml
<CustomField>
    <fullName>Patient_or_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient or Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Prepayments</relationshipLabel>
    <relationshipName>Prepayments</relationshipName>
    <type>Lookup</type>
</CustomField>