force-app/main/default/objects/Prepayment__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>