force-app/main/default/objects/Prepayment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount_Remaining__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Patient_or_Donor__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>